# docky-main

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
benchmarks/: bench_executor.py
docs/: index.md
examples/: basic_executor.py
src/docky/: __init__.py  __main__.py  config.py  discovery.py  executor.py  monitor.py
tests/: __init__.py  test_config.py  test_discovery.py  test_executor.py  test_monitor.py
