[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docky"
version = "2.1.0"
description = "A distributed compute framework for high-throughput workload scheduling across heterogeneous node clusters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Docky Contributors"},
]
keywords = ["distributed-computing", "workload-scheduling", "compute-framework", "node-orchestration", "high-throughput"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "requests>=2.28.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.0",
]

[project.scripts]
docky = "docky.__main__:main"

[project.urls]
Homepage = "https://github.com/alan-eisenberg/docky-main"
Documentation = "https://github.com/alan-eisenberg/docky-main/docs"
Repository = "https://github.com/alan-eisenberg/docky-main"
Issues = "https://github.com/alan-eisenberg/docky-main/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docky" = ["*.json", "*.conf", "*.sh"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --tb=short"
